Leaflet z-index select bug

--- a/css/index.scss
+++ b/css/index.scss
@@ -6,3 +6,6 @@
 #map {
   height: 40vh;
 }
+.leaflet-top, .leaflet-bottom {
+  z-index: 400;
+}
